--- a/config/boards/shields/chippy/chippy_right.conf
+++ b/config/boards/shields/chippy/chippy_right.conf
@@ -7,3 +7,4 @@ CONFIG_NFCT_PINS_AS_GPIOS=y
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_INVERT=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
