--- a/config/chippy.conf
+++ b/config/chippy.conf
@@ -6,6 +6,7 @@ CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=20
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_INVERT=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 
 # Turn on logging, and set ZMK logging to debug output
 # CONFIG_ZMK_USB_LOGGING=y
